changes in jason file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yitek",
-  "version": "1.0.0",
+  "name": "yenteco",
+  "version": "1.0.1",
   "description": "a technology company in yendi",
   "main": "index.js",
   "scripts": {
