--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "keywords": [
     "yendi-tech",
+    "yendi-tech-company",
+    "yendi-technology",
+    "Yakubu-Iddrisu",
+    "Iddrisu-Yakubu",
+    "Iddris the Developer",
     "yendi-web-developers",
     "yendi-programmers",
     "yendi-programmers",
